tests/ui/higher-ranked/trait-bounds/hrtb-higher-ranker-supertraits.stderr
error: lifetime may not live long enough
  --> $DIR/hrtb-higher-ranker-supertraits.rs:14:5
   |
LL | fn want_foo_for_some_tcx<'x, F: Foo<'x>>(f: &'x F) {
   |                          -- lifetime `'x` defined here
LL |     want_foo_for_some_tcx(f);
LL |     want_foo_for_any_tcx(f);
   |     ^^^^^^^^^^^^^^^^^^^^^^^ requires that `'x` must outlive `'static`
   |
note: due to current limitations in the borrow checker, this implies a `'static` lifetime
  --> $DIR/hrtb-higher-ranker-supertraits.rs:19:28
   |
LL | fn want_foo_for_any_tcx<F: for<'tcx> Foo<'tcx>>(f: &F) {
   |                            ^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/hrtb-higher-ranker-supertraits.rs:14:5
   |
LL |     want_foo_for_any_tcx(f);
   |     ^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected trait `for<'tcx> Foo<'tcx>`
              found trait `Foo<'_>`
note: the lifetime requirement is introduced here
  --> $DIR/hrtb-higher-ranker-supertraits.rs:19:28
   |
LL | fn want_foo_for_any_tcx<F: for<'tcx> Foo<'tcx>>(f: &F) {
   |                            ^^^^^^^^^^^^^^^^^^^

error: lifetime may not live long enough
  --> $DIR/hrtb-higher-ranker-supertraits.rs:29:5
   |
LL | fn want_bar_for_some_ccx<'x, B: Bar<'x>>(b: &B) {
   |                          -- lifetime `'x` defined here
...
LL |     want_bar_for_any_ccx(b);
   |     ^^^^^^^^^^^^^^^^^^^^^^^ requires that `'x` must outlive `'static`
   |
note: due to current limitations in the borrow checker, this implies a `'static` lifetime
  --> $DIR/hrtb-higher-ranker-supertraits.rs:34:28
   |
LL | fn want_bar_for_any_ccx<B: for<'ccx> Bar<'ccx>>(b: &B) {
   |                            ^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/hrtb-higher-ranker-supertraits.rs:29:5
   |
LL |     want_bar_for_any_ccx(b);
   |     ^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected trait `for<'ccx> Bar<'ccx>`
              found trait `Bar<'_>`
note: the lifetime requirement is introduced here
  --> $DIR/hrtb-higher-ranker-supertraits.rs:34:28
   |
LL | fn want_bar_for_any_ccx<B: for<'ccx> Bar<'ccx>>(b: &B) {
   |                            ^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
